fix: wrong hud value width in end page on mobile

--- a/src/components/end/end.component.scss
+++ b/src/components/end/end.component.scss
@@ -38,7 +38,6 @@
   text-align: center;
   background-color: white;
   padding: 1rem 0.5rem;
-  width: 120px;
   border-radius: 0 0 10px 10px;
   border-left: 0.1rem solid rgba(0, 0, 0, 0.1);
   border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1);
