--- a/src/components/game/game.component.scss
+++ b/src/components/game/game.component.scss
@@ -40,10 +40,6 @@
   background-color: #8819e5;
   border-radius: 10px 0 0 10px;
   color: white;
-
-  @include to-xs {
-    padding: 1.5rem 1.5rem;
-  }
 }
 
 .choice-text {
